# omni-wheel-bot

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  run.sh
.cargo/: config.toml
.github/workflows/: ci.yml
app/: Cargo.toml  app.py  echo_server.py  requirements.txt
app/src/: lib.rs
app/static/js/: main.js
app/templates/: index.html
app/transport/: index.html
core/: Cargo.toml
core/src/: lib.rs
core/src/utils/: mod.rs
core/src/utils/connection/: server.rs
core/src/utils/controllers/: driver.rs  i2c.rs  kinematics.rs  leds.rs  mod.rs
core/tests/: controllers_tests.rs  mock_devices.rs
owb-app/mock-mcu/: Cargo.toml
owb-app/mock-mcu/src/: main.rs
owb-bin/espressif/: Cargo.toml
owb-core/: Cargo.toml  README.md
owb-core/src/: lib.rs
owb-core/src/utils/: mod.rs
owb-core/src/utils/connection/: mod.rs  server.rs
owb-core/src/utils/controllers/: i2c.rs  leds.rs  mod.rs
owb-core/src/utils/frontend/: mod.rs
owb-core/src/utils/math/: kinematics.rs  mod.rs
owb-core/tests/: controllers_tests.rs  mock_devices.rs  mock_tests.rs
src/: lib.rs  main.rs
src/app/: index.html
src/app/static/js/: main.js
src/transport/: index.html  mini_index.html
src/utils/: mod.rs
src/utils/camera/: mega_ccm.rs  mod.rs
src/utils/connection/: mod.rs  server.rs
src/utils/controllers/: i2c.rs  i2c_devices.rs  kinematics.rs  leds.rs  mod.rs  pid.rs  wheel_kinematics.rs
src/utils/frontend/: mod.rs
tests/: controllers_tests.rs  mock_devices.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/connection/: mod.rs  server.rs
utils/src/controllers/: i2c_devices.rs  mod.rs  wheel_kinematics.rs
utils/tests/: controllers_tests.rs  mock_devices.rs
