[package]

name = "app"
version = "0.1.0"
authors = [
    "Big Fat Bear",
]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level        = 3


[dependencies]

embassy-executor = {workspace = true}
embassy-net = {workspace = true}
embassy-time = {workspace = true}
static_cell = {workspace = true}
tracing = {workspace = true}
embassy-sync = {workspace = true}
serde = {workspace = true}

esp-hal = {version = "0.22.0", features = ["esp32"]}
esp-hal-embassy = {version = "0.5.0", features = ["esp32"]}
esp-wifi = {version = "0.11.0", features = ["esp32", "wifi", "utils"]}
esp-alloc = {version = "0.5.0"}

utils = {package = "utils", path = "../utils"}