[package]
name = "owb-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = "Core drivers and utilities for the Omni‑Wheel Bot (no‑std embedded robotics)"
readme = "README.md"
repository = "https://github.com/Token-Thinker/omni-wheel-bot"
homepage = "https://github.com/Token-Thinker/omni-wheel-bot"
documentation = "https://docs.rs/owb-core"
keywords = ["embedded", "no-std", "robotics", "omni-wheel", "embassy"]
categories = ["embedded", "no-std", "science::robotics"]

[dependencies]
embedded-hal = { version = "1.0" }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = { version = "0.6" }
embassy-net = {version = "0.7.0"}
embassy-sync = {version =  "0.7.0" }
embassy-time = {version = "0.4.0"}
hashbrown = { version = "0.15.2" }
icm42670 = { version = "0.2.0" }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
libm = { version = "0.2.11" }
picoserve = { version = "0.16.0", features = ["embassy"] }
pwm-pca9685 = { version = "1.0.0" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", features = ["alloc"], default-features = false }
static_cell = { version = "2.0", features = ["nightly"] }
smart-leds-trait = { version = "0.3.0" }
tracing = { version = "0.1", default-features = false, features = ["log","attributes"] }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }