[package]

name = "utils"
version = "0.1.0"
authors = [
    "Big Fat Bear",
]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = ["libm/default"]

[dependencies]
libm = "0.2.11"

embedded-hal = {workspace = true}
embedded-hal-mock = {workspace = true}
embedded-hal-bus = { version = "0.2.0", features = ["async"] }

#I2C drivers
pwm-pca9685 = "1.0.0"
icm42670 = "0.2.0"

embassy-net = {workspace = true}
embassy-executor = {workspace = true}
embassy-time = {workspace = true}

static_cell = {workspace = true}


embedded-io-async = "0.6.1"

serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.2"
heapless = "0.8.0"
tracing = "0.1.41"





[build-dependencies]
