[package]

name = "utils"
version = "0.1.0"
authors = [
    "Big Fat Bear",
]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = ["libm/default"]

[dependencies]

static_cell = {workspace = true}
embedded-hal = {workspace = true}
embedded-hal-mock = {workspace = true}

#I2C drivers
pwm-pca9685 = "1.0.0"
icm42670 = "0.2.0"

libm = "0.2.11"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }

#Comms
picoserve = {version = "^0.12", features = ["embassy"]}
embassy-net = {workspace = true}
embassy-time = {workspace = true}
embassy-sync = {workspace = true}
embassy-executor = {workspace = true}


tracing = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}

[build-dependencies]
