[package]
name = "turning_point_esp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "turning_point_esp"
path = "src/features/turning_point_esp.rs"


[build-dependencies]
cfg-if = "1.0.0"
[features]
esp32 = ["esp-hal/esp32", "esp-hal-embassy/esp32", "esp-backtrace/esp32","esp-println/esp32", "esp-wifi/esp32"]
esp32c2 = []
esp32c3 = []
esp32c6 = []
esp32h2 = []
esp32s2 = []
esp32s3 = ["esp-hal/esp32s3", "esp-hal-embassy/esp32s3", "esp-backtrace/esp32s3","esp-println/esp32s3","esp-wifi/esp32s3"]

[dependencies]
owb-core = { path = "../../owb-core" }

# Board-specific and embedded dependencies
cfg-if = "1.0.0"
embassy-executor = "0.7.0"
embassy-net = { version = "0.7.0",features = ["dhcpv4"] }

esp-alloc = { version = "0.7.0" }
esp-backtrace = { version = "0.15.0", features = ["exception-handler", "println", "panic-handler"] }
esp-hal = { version = "1.0.0-beta.0", features = ["unstable", "psram"] }
esp-hal-embassy = { version = "0.7.0"}
esp-println = { version = "0.13.0", features = ["log"] }
esp-wifi = { version = "0.13.0", features = ["wifi"] }

log = { version = "0.4" }
static_cell = { version = "2.0", features = ["nightly"] }
tracing = { version = "0.1", default-features = false, features = ["log", "attributes"] }